force-app/main/default/objects/Area_Sales_Manger__c/fields/Tehsil_Name__c.field-meta.xml
<CustomField>
    <fullName>Tehsil_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tehsil Name</label>
    <referenceTo>Tehsil__c</referenceTo>
    <relationshipName>Area_Sales_Mangers</relationshipName>
    <type>Lookup</type>
</CustomField>