force-app/main/default/objects/Area_Sales_Manger__c/fields/Testimonial_Videos_Photos_Done__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Videos_Photos_Done__c</fullName>
    <label>Testimonial Videos / Photos Done</label>
    <summaryFilterItems>
        <field>Marketing_Activity__c.Activity_Type__c</field>
        <operation>equals</operation>
        <value>Testimonial Videos / Photos</value>
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Activity__c.Area_Sales_Manger__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>