force-app/main/default/objects/Area_Sales_Manger__c/fields/Testimonial_Videos_Photos_Target__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Videos_Photos_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Testimonial Videos / Photos Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>