force-app/main/default/objects/Area_Sales_Manger__c/fields/Total_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Activity_Count__c</fullName>
    <label>Total Activity Count</label>
    <summarizedField>Marketing_Activity__c.Achieve_Count__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Area_Sales_Manger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>